# src/app/api/models/clasification.ts
@@ -1,0 +1,6 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface Clasification {
+  description?: null | string;
+  id?: number;
+}
