# src/app/api/services.ts
@@ -1,3 +1,2 @@
-export { BeerService } from './services/beer.service';
-export { WeatherForecastService } from './services/weather-forecast.service';
+export { ClasificationService } from './services/clasification.service';
 export { WineService } from './services/wine.service';
