# swagger/swagger.config.json
@@ -10,10 +10,10 @@
     }
   ],
   "paths": {
-    "/api/Beer": {
+    "/api/Clasification/getClasification": {
       "get": {
         "tags": [
-          "Beer"
+          "Clasification"
         ],
         "parameters": [
           {
@@ -31,17 +31,17 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "$ref": "#/components/schemas/Beer"
+                  "$ref": "#/components/schemas/Clasification"
                 }
               },
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Beer"
+                  "$ref": "#/components/schemas/Clasification"
                 }
               },
               "text/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Beer"
+                  "$ref": "#/components/schemas/Clasification"
                 }
               }
             }
@@ -49,106 +49,10 @@
         }
       }
     },
-    "/api/Beer/addBeer": {
-      "post": {
-        "tags": [
-          "Beer"
-        ],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/Beer"
-              }
-            },
-            "text/json": {
-              "schema": {
-                "$ref": "#/components/schemas/Beer"
-              }
-            },
-            "application/*+json": {
-              "schema": {
-                "$ref": "#/components/schemas/Beer"
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "Success",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "$ref": "#/components/schemas/Beer"
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Beer"
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Beer"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/Beer/updateBeer": {
-      "post": {
-        "tags": [
-          "Beer"
-        ],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/Beer"
-              }
-            },
-            "text/json": {
-              "schema": {
-                "$ref": "#/components/schemas/Beer"
-              }
-            },
-            "application/*+json": {
-              "schema": {
-                "$ref": "#/components/schemas/Beer"
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "Success",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "$ref": "#/components/schemas/Beer"
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Beer"
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Beer"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/WeatherForecast": {
+    "/api/Clasification/getClasifications": {
       "get": {
         "tags": [
-          "WeatherForecast"
+          "Clasification"
         ],
         "responses": {
           "200": {
@@ -158,7 +62,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/WeatherForecast"
+                    "$ref": "#/components/schemas/Clasification"
                   }
                 }
               },
@@ -166,7 +70,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/WeatherForecast"
+                    "$ref": "#/components/schemas/Clasification"
                   }
                 }
               },
@@ -174,7 +78,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/WeatherForecast"
+                    "$ref": "#/components/schemas/Clasification"
                   }
                 }
               }
@@ -398,37 +302,14 @@
   },
   "components": {
     "schemas": {
-      "Beer": {
+      "Clasification": {
         "type": "object",
         "properties": {
           "id": {
             "type": "integer",
             "format": "int32"
           },
-          "name": {
-            "type": "string",
-            "nullable": true
-          }
-        },
-        "additionalProperties": false
-      },
-      "WeatherForecast": {
-        "type": "object",
-        "properties": {
-          "date": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "temperatureC": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "temperatureF": {
-            "type": "integer",
-            "format": "int32",
-            "readOnly": true
-          },
-          "summary": {
+          "description": {
             "type": "string",
             "nullable": true
           }
@@ -459,16 +340,16 @@
             "nullable": true
           },
           "swetness": {
-            "type": "number",
-            "format": "float"
+            "type": "integer",
+            "format": "int32"
           },
           "acidity": {
-            "type": "number",
-            "format": "float"
+            "type": "integer",
+            "format": "int32"
           },
           "alcohol": {
-            "type": "number",
-            "format": "float"
+            "type": "integer",
+            "format": "int32"
           },
           "notes": {
             "type": "string",
